# AoC

./: .gitignore  README.md
2023/: Cargo.toml  README.md  justfile
2023/daily-template/: Cargo.toml
2023/daily-template/src/: part1.rs
2023/day-01/: Cargo.toml
2023/day-02/: Cargo.toml
2023/day-02/src/: part1.rs  part2.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: custom_error.rs  part1.rs  part2.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml  README.md
2023/day-05/src/: part1.rs  part2.rs
