[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rstest = { workspace = true }
ariadne = "0.3.0"
rand = "0.8.5"
