[package]
name = "day-05"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rstest = { workspace = true }
ariadne = { workspace = true }

[[bin]]
name = "main"
path = "src/bin/main.rs"
